  Added: Attributes 'network-id', 'ca-id', 'provider-ident' and 'origin-id' to <ecm> (transaction logs). These are only
  included when the transaction occured in the '*' profile, and origin-id only for CspSession transactions.
  Added: Attribute 'au' to <session> for NewcamdSessions. Indicates which connector the session is forwarding emms to.


0.8.13 - 2009-10-18

- Added: New attribute per profile 'network-id' (the original dvb network id, 4 hex digits). This will uniquely
  identify profiles between proxies, instead of ca-id. It will also be used in filtering enigma services files. 
  See proxy-reference.html for info about how to find the id if you don't know your dvb-network.
- Added: Optional mapping table to auto-assign newcamd connectors to profiles based on ca-id, to make this work as 
  before even when multiple profiles use the same ca-id (no longer any need to set 0000, use the correct id always).
  Use this only when it is unknown which card a remote newcamd server contains (or when this changes randomly).
- Added: ClusteredCache now avoids locking for requests where a remotely received cache lock has the same ip as
  requesting client, to deal with situations where both connectors and cache sharing are used to link multiple proxies
  together (prevents incoming ecm requests from a remote proxy being blocked by the cache lock from that same proxy).
- Added: Plugins can now affect connector selection, if they implement the interface CwsSelector. They'll be given a
  chance to exclude connectors from the selection process for each message.
- Added: Cache hits where the cached request had a different ca-id will now be blocked, to avoid misleading clients
  that are sending requests to the wrong profile. This can be disabled using new global setting <block-caid-mismatch>.
- Added: Disconnected connectors now show when they went offline.
- Added: Newcamd OSD messages are now sent to Acamd as well (previously only to Mgcamd).